# scicellxx

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  autogen.sh  make_clean_distro.sh  make_doc.sh  scicellxx.yml
.github/workflows/: build_and_test.yml
configs/: conda  current  default  default_container
configs/advanced/: CUDA  mpi
demos/argparse/: CMakeLists.txt  demo_argparse.cpp
demos/interpolation/basic_interpolation/: CMakeLists.txt  demo_basic_interpolation.cpp
demos/linear_solvers/basic_armadillo_solver/: CMakeLists.txt  demo_armadillo_linear_solver.cpp
demos/linear_solvers/basic_direct_solver/: CMakeLists.txt  demo_linear_solver.cpp
demos/matrices/basic_operations/: CMakeLists.txt  demo_copy_matrices.cpp  demo_matrix_basic_operations.cpp
demos/matrices/basic_operations_armadillo/: CMakeLists.txt  demo_matrix_basic_operations_armadillo.cpp
demos/newtons_method/basic_newtons_method/: CMakeLists.txt  demo_basic_newtons_method.cpp
demos/odes/3body_problem/: CMakeLists.txt  cc_odes_basic_3_body.cpp  cc_odes_basic_3_body.h  demo_basic_3_body.cpp
demos/odes/4body_problem/: CMakeLists.txt  cc_odes_basic_4_body.cpp  cc_odes_basic_4_body.h  demo_basic_4_body.cpp
demos/odes/basic_ode/: CMakeLists.txt  demo_basic_ode.cpp
demos/odes/basic_ode_stability_analysis/: CMakeLists.txt  demo_basic_ode_stability_analysis.cpp
demos/odes/chen/: CMakeLists.txt  (+3 more)
docs/source/: coding_style.rst  contributions.rst  emacs.rst  index.rst  initial_steps.rst  license.rst  tutorials.rst  workflows.rst
external_src/: CMakeLists.txt
external_src/numerical_recipes/: nrtypes_lib.h  nrtypes_nr.h  nrutil_mtl.h  nrutil_nr.h  nrutil_tnt.h  nrutil_val.h
private/: CMakeLists.txt
private/julio/: CMakeLists.txt
private/julio/lotka_volterra/: CMakeLists.txt  cc_lotka_volterra_odes.cpp  cc_lotka_volterra_odes.h  demo_lotka_volterra.cpp
private/julio/mTASEP/: CMakeLists.txt  csv_to_jpeg.py  csv_to_jpeg_for_microtubule_animations.py  csv_to_jpeg_for_space_stage.py  demo_mTASEP.cpp  demo_mTASEP_LK.cpp
private/rodolfo/: CMakeLists.txt
private/rodolfo/mTASEP/: CMakeLists.txt  cuda_functions.cu  cuda_functions.h  demo_mTASEP_LK.cu  demo_mTASEP_LK_CUDA.cu  ejecucion
src/: CMakeLists.txt  scicellxx.h
src/data_structures/: CMakeLists.txt  ac_odes.h  cc_boundary_node.cpp  cc_boundary_node.h  cc_data.cpp  cc_data.h  cc_node.cpp  cc_node.h  data_structures.h
src/equations/: CMakeLists.txt  ac_jacobian_and_residual.cpp  ac_jacobian_and_residual.h  ac_odes.cpp  ac_odes.h  equations.h
src/equations/poisson/: cc_node_inverse_multiquadric_poisson.cpp  cc_node_inverse_multiquadric_poisson.h
src/equations/rbf/: ac_radial_base_function.cpp  ac_radial_base_function.h  cc_inverse_multiquadric.cpp  cc_inverse_multiquadric.h
src/general/: common_includes.h  definitions.h  general.h  initialise.cpp  initialise.h  utilities.cpp  utilities.h
src/interpolators/: CMakeLists.txt  ac_interpolator.cpp  ac_interpolator.h  cc_newton_interpolator.cpp  cc_newton_interpolator.h  interpolators.h
src/linear_solvers/: ac_linear_solver.cpp  ac_linear_solver.h  cc_factory_linear_solver.cpp  cc_factory_linear_solver.h  cc_lu_solver_numerical_recipes.cpp  cc_lu_solver_numerical_recipes.h  cc_solver_armadillo.cpp  cc_solver_armadillo.h  linear_solvers.h
src/matrices/: CMakeLists.txt  ac_matrix.cpp  ac_matrix.h  ac_vector.cpp  ac_vector.h  cc_factory_matrices.cpp  cc_factory_matrices.h  cc_factory_matrices.tpl.cpp  cc_factory_matrices.tpl.h  cc_matrix.cpp  cc_matrix.h  cc_matrix_armadillo.cpp  cc_matrix_armadillo.h  cc_vector.cpp  cc_vector.h  cc_vector_armadillo.cpp  cc_vector_armadillo.h  matrices.h
src/newtons_method/: CMakeLists.txt  cc_newtons_method.cpp  cc_newtons_method.h  newtons_method.h
src/problem/: CMakeLists.txt  ac_ibvp.cpp  ac_ibvp.h  ac_ibvp.tpl.cpp  ac_ibvp.tpl.h  ac_ibvp_for_odes.cpp  ac_ibvp_for_odes.h  ac_ivp_for_odes.h  ac_mesh_free_problem.h  ac_mesh_free_problem.tpl.cpp  ac_mesh_free_problem.tpl.h  ac_problem.cpp  ac_problem.h  cc_newtons_method.cpp  cc_newtons_method.h  problem.h
src/time_steppers/: CMakeLists.txt  ac_adaptive_new_step_size_strategy.cpp  ac_adaptive_new_step_size_strategy.h  ac_adaptive_time_stepper.cpp  ac_adaptive_time_stepper.h  ac_adaptive_time_stepper.tpl.cpp  ac_adaptive_time_stepper.tpl.h  ac_jacobian_and_residual_for_implicit_time_stepper.h  ac_jacobian_and_residual_for_implicit_time_stepper.tpl.cpp  ac_jacobian_and_residual_for_implicit_time_stepper.tpl.h  ac_newtons_method_for_implicit_time_stepper.h  ac_newtons_method_for_implicit_time_stepper.tpl.cpp  ac_newtons_method_for_implicit_time_stepper.tpl.h  ac_predictor_corrector_time_stepper.cpp  ac_predictor_corrector_time_stepper.h  ac_predictor_corrector_time_stepper.tpl.cpp  ac_predictor_corrector_time_stepper.tpl.h  ac_time_stepper.h  ac_time_stepper.tpl.cpp  ac_time_stepper.tpl.h  ac_time_stepper_for_odes.cpp  ac_time_stepper_for_odes.h  cc_adams_moulton_2_method.cpp  cc_adams_moulton_2_method.h  cc_adams_moulton_2_method.tpl.cpp  cc_adams_moulton_2_method.tpl.h  cc_adams_moulton_2_predictor_corrector_method.cpp  cc_adams_moulton_2_predictor_corrector_method.h  cc_adams_moulton_2_predictor_corrector_method.tpl.cpp  cc_adams_moulton_2_predictor_corrector_method.tpl.h  cc_adaptive_new_step_size_half_double.cpp  cc_adaptive_new_step_size_half_double.h  cc_adaptive_runge_kutta_45DP_method.h  cc_adaptive_runge_kutta_45DP_method.tpl.cpp  cc_adaptive_runge_kutta_45DP_method.tpl.h  cc_adaptive_runge_kutta_45F_method.h  cc_adaptive_runge_kutta_45F_method.tpl.cpp  cc_adaptive_runge_kutta_45F_method.tpl.h  cc_backward_euler_method.cpp  cc_backward_euler_method.h  (+50 more)
src/vtk/: cc_scicellxx2vtk.cpp  cc_scicellxx2vtk.h  vtk.h
tools/: clean_distro.py  fpdiff.py  stop_scicellxx_on_docker.sh
tools/development/: remove_unwanted_files.sh
tools/emacs/: init.el
tools/templates/: CMakeLists.txt.private_template  project_template_basic.cpp  project_template_interpolation.cpp
tools/user/: LNS_gxx_submit_script.sh  make_clean_distro.sh  make_new_project.sh  make_new_user.sh  run_scicellxx_on_docker.sh
(+36 files in other folders)
