# Add directories with source files (in order of dependence, the ones
# with no dependency first then the others)
ADD_SUBDIRECTORY(general)
ADD_SUBDIRECTORY(data_structures)
ADD_SUBDIRECTORY(matrices)
IF (SCICELLXX_USES_VTK)
   ADD_SUBDIRECTORY(vtk)
ENDIF (SCICELLXX_USES_VTK)
ADD_SUBDIRECTORY(linear_solvers)
ADD_SUBDIRECTORY(equations)
ADD_SUBDIRECTORY(time_steppers)
ADD_SUBDIRECTORY(problem)
# Once all subdirectories have compiled their stuff then create a VARIABLE to hold their names
IF (SCICELLXX_USES_VTK)
   SET(LIB_src_lib time_stepper_lib equations_lib problem_lib linear_solvers_lib vtk_lib matrices_lib data_structures_lib general_lib numerical_recipes_lib argparse_lib PARENT_SCOPE)
ELSE ()
   SET(LIB_src_lib time_stepper_lib equations_lib problem_lib linear_solvers_lib matrices_lib data_structures_lib general_lib numerical_recipes_lib argparse_lib PARENT_SCOPE)
ENDIF (SCICELLXX_USES_VTK)
